# cad3dify

./: .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml  text
alembic/: env.py
alembic/versions/: 9d813f751dc5_initial_jobs_organic_jobs_user_.py
backend/: config.py  main.py
cad3dify/: __init__.py  chat_models.py  pipeline.py
cadpilot/: __init__.py  pipeline.py
docs/: V2-CURRENT-CAPABILITIES.md  市场-销售-计划流程.md  采购申请单-AI模型与算力资源.docx  采购申请单-AI模型与算力资源.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
scripts/: app.py  cli.py  migrate_corrections.py  start-v3.sh  start.sh
tests/: conftest.py  test_api_health.py  test_api_v1.py  test_apply_lattice.py  test_asset_store.py  test_ast_checker.py  test_benchmark.py  test_benchmark_runner.py  test_boolean_assemble.py  test_breakpoints.py  test_builder.py  test_builder_new.py  test_characterization.py  test_code_persistence.py  test_context.py  test_contour_overlay.py  test_correction_analytics.py  test_cross_section.py  test_descriptor.py  test_dfam_export.py  test_drawing_analyzer.py  test_dual_channel_e2e.py  test_engineering_standards.py  test_export_api.py  test_feature_model.py  test_format_exporter.py  test_generate_api.py  test_generate_raw_mesh.py  test_generate_raw_mesh_node.py  test_generate_supports.py  test_generation_nodes.py  test_graph_builder.py  test_graph_hitl.py  test_graph_nodes_analysis.py  test_graph_nodes_lifecycle.py  test_graph_routing.py  test_graph_state.py  test_graph_timeout.py  test_history_api.py  test_hitl_integration.py  (+57 more)
(+407 files in other folders)
